Complete TaskList component Complete Main page when exist tasks

--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@material-ui/icons": "^4.9.1",
     "@types/react-redux": "^7.1.9",
     "@types/yup": "^0.29.7",
+    "clsx": "^1.1.1",
     "formik": "^2.1.5",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "yup": "^0.29.3"
